fixed minor alignment problems in featured articles table

--- a/assets/style.css
+++ b/assets/style.css
@@ -67,7 +67,7 @@ p{
 }
 p a{
    color:2980B9;
-   border-bottom: 1px solid #fff;
+   border-bottom: 0px solid #fff;
      
 }
 
@@ -712,7 +712,7 @@ and (min-width : 1224px) {
   height:56px;
   text-indent:-9999px;
   display:block;
-  background:url('https://s3.amazonaws.com/onepagelove/one-page-love-award-right.png') no-repeat;
+  background:none no-repeat;
 }
 h1.billboard {
   font-size: 36px;
@@ -779,13 +779,6 @@ h3.features {
   margin-top: 60px;
  }
 table.articles {
-	width: 80%;
+	width: 100%;
 	margin-bottom: 0px;
-}
-.list-group.articles {
-	padding-left: 0;
-	margin: auto;
-}
-.list-group-item.active:hover{
-	color:transparent;
 }
